laradock cantainer proxy

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -9,10 +9,12 @@ LABEL maintainer="Mahmoud Zalt <mahmoud@zalt.me>"
 
 ARG TZ=UTC
 ENV TZ ${TZ}
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && chown -R mysql:root /var/lib/mysql/
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && chown -R mysql:root /var/lib/mysql/ %% chmod 644 /etc/mysql/conf.d/my.cnf
 
 COPY my.cnf /etc/mysql/conf.d/my.cnf
 
-CMD ["mysqld"]
+RUN chmod 644 /etc/mysql/conf.d/my.cnf
+
+CMD ["mysqld --user=root"]
 
 EXPOSE 3306
