--- a/mysql/docker-entrypoint-initdb.d/createdb.sql.example
+++ b/mysql/docker-entrypoint-initdb.d/createdb.sql.example
@@ -6,7 +6,7 @@
 #
 #    CREATE DATABASE IF NOT EXISTS `myshop_db` ;
 #    GRANT ALL ON `myshop_db`.* TO 'appuser'@'%' ;
-#
+#    grant all privileges on 库名.表名 to '用户名'@'IP地址' identified by '密码' with grant option;
 #
 # this sql script will auto run when the mysql container starts and the $DATA_PATH_HOST/mysql not found.
 #
