--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -1,7 +1,7 @@
 server {
 
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
+    listen 80 ;
+    listen [::]:80 ;
 
     # For https
     # listen 443 ssl default_server;
@@ -11,7 +11,8 @@ server {
 
     server_name localhost;
     root /var/www/public;
-    index index.php index.html index.htm;
+    # root /usr/share/nginx/html;
+    index index.php index.html index.htm ;
 
     location / {
          try_files $uri $uri/ /index.php$is_args$args;
